update: save template data fixed, todo for later

--- a/Date Count/js/todo.txt
+++ b/Date Count/js/todo.txt
@@ -5,6 +5,6 @@ delete event date menu:
 date in form logic
 
 
-new event as ribbon tag
-style ribbon later
-todo
+context menu to show event plant
+
+restyle the form later
