--- a/Pokemon API Practice/todo.txt
+++ b/Pokemon API Practice/todo.txt
@@ -60,3 +60,11 @@ https://opentdb.com/
 https://pokeapi.co/
 
 https://www.themealdb.com/api.php
+
+
+https://pokemondb.net/tools/text-list
+
+
+
+https://bulbapedia.bulbagarden.net/wiki/Colorless_(TCG)
+=> background by types
